[tool.poetry]
name = "langchain-playground"
version = "0.1.0"
description = ""
authors = ["Nic"]
readme = "README.md"
packages = [{include = "langchain_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
transformers = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
